--- a/app/locale/pt_BR/Ziny_EditaFacil.csv
+++ b/app/locale/pt_BR/Ziny_EditaFacil.csv
@@ -2,23 +2,141 @@
 "Setting","Definição"
 "Yes","Sim"
 "No","Não"
-"Buy Floating Button","Comprar Flutuante"
+"Easy Custom Theme","Edita Fácil"
 "Enable","Habilitado"
 "Defines whether the module is active or not.","Define se o módulo está ativo ou não."
-"Box Background color","Cor de Fundo"
-"Background color of the button box.","Cor de fundo da caixa do botão."
-"Color Hide Button","Cor do Botão Esconder"
-"The button color to hide the box.","A cor do botão para esconder a caixa." 
-"Color Hidded Button","Cor do Botão Escondido"
-"The button color when the box is hidden.","A cor do botão quando a caixa estiver escondida."
-"Margin Top","Distância do Topo"
-"Margin in the box is the top of the screen.","Espaço em que a caixa ficará do topo da tela."
-"Side Margin","Distância da Lateral"
-"Margin in the box is the side of the screen.","Espaço em que a caixa ficará da lateral da tela."
-"Position of the Floating Button","Posição do Botão Flutuante"
-"Which side of the screen the button box should appear.","Qual o lado da tela a caixa do botão deve aparecer."
-"Set Right","Fixado na Direita"
-"Set Left","Fixado na Esquerda"
-"Box Size","Tamanho da Caixa"
-"Add to Cart","Adicionar ao Carrinho"
-"If left blank the box assumes the automatic size.","Se ficar em branco a caixa assume o tamanho automático."
+"Global Settings","Definições Globais"
+"Define Style as Important","Definir Estilo como Importante"
+"Set all style as important.","Define todo o estilo como importante."
+"Content Settings","Definições de Conteúdo"
+"Top Header Settings","Definições do Cabeçalho Principal"
+"Header Settings","Definições do Cabeçalho"
+"Menu Settings","Definições do Menu"
+"Footer Settings","Definições do Rodapé"
+"Footer Titles Settings","Definições de Títulos do Rodapé"
+"Buttons Settings","Definições de Botões"
+"Prices Settings","Definições de Preços"
+"Category and Page Titles","Categorias e Títulos de Páginas"
+"Block Titles","Títulos de Blocos"
+"Block Sub-Titles","Subtítulos de Blocos"
+"Font Family","Família de Fontes"
+"Link Color","Cor do Link"
+"Link Color Hover","Cor Hover do Link"
+"Background Color","Cor de Fundo"
+"Font Color","Cor da Fonte"
+"Font Size","Tamanho da Fonte"
+"Font Line Height", "Altura de Linha da Fonte"
+"Font Weight","Espessura da Fonte"
+"Text Transform","Tipo do Texto"
+"Background Item Hover","Cor Hover do Fundo de Item"
+"Background Hover","Cor Hover do Fundo"
+"Border Color","Cor da Borda"
+"Border Color Hover","Cor Hover da Borda"
+"Border Radius", "Raio da Borda"
+"Price Color","Cor do Preço"
+"Price Color Hover","Cor Hover do Preço"
+"Price Font Weight","Espessura da Fonte do Preço"
+"Price Line Height","Altura de Linha do Preço"
+"Text Position","Posição do Texto"
+"Border Bottom Color","Cor da Borda Inferior"
+"Font Color Hover", "Cor Hover da Fonte"
+"None","Nenhum"
+"Capitalize","Letra capitular"
+"Uppercase","Maiúsculo"
+"Lowercase","Minúsculo"
+"Left","Esquerdo"
+"Center","Centro"
+"Right","Direito"
+"This font family will be used for all content text.","Esta família de fontes será utilizada em todos os contéudos de texto."
+"This color will be used for content link.","Esta cor será utilizada em todos os conteúdos de link."
+"This color will be used for content link mouseover.","Esta cor de hover será utilizada em todos os conteúdos de link"
+"This color will be used for content background.","Esta cor será utilizada de fundo em todos os conteúdos."
+"This color will be used for content text.","Esta cor será utilizada em todos os conteúdos de texto."
+"This size will be used for content text.","Este tamanho será utilizado em todos os conteúdos de texto."
+"This line height will be used for content text.","Esta altura de linha será utilizada em todos os conteúdos de texto."
+"This color will be used for top header background.","Esta cor será utilizada no fundo do cabeçalho principal."
+"This font family will be used for top header text.","Esta família de fontes será utilizada nos textos do cabeçalho principal."
+"This color will be used for top header text.","Esta cor será utilizada nos textos do cabeçalho principal."
+"This color will be used for top header link mouseover.","Esta cor de hover será utilizada nos links do cabeçalho principal."
+"This size will be used for top header text.","Este tamanho será utilizado nos textos do cabeçalho principal."
+"This font weight will be used for top header text.","Esta espessura será utilizada nos textos do cabeçalho principal."
+"This line height will be used for top header text.","Esta altura de linha será utilizada nos textos do cabeçalho principal."
+"This transform will be used for top header text.","Este tipo será utilizado nos textos do cabeçalho principal."
+"This color will be used for header background.","Esta cor será utilizada no fundo do cabeçalho."
+"This font family will be used for header text.","Esta família de fontes será utilizada nos textos do cabeçalho."
+"This color will be used for header text.","Esta cor será utilizada nos textos do cabeçalho."
+"This color will be used for header link mouseover.","Esta cor de hover será utilizada nos links do cabeçalho."
+"This size will be used for header text.","Este tamanho será utilizado nos textos do cabeçalho."
+"This font weight will be used for header text.","Esta espessura será utilizada nos textos do cabeçalho."
+"This line height will be used for header text.","Esta altura de linha será utilizada nos textos do cabeçalho."
+"This transform will be used for header text.","Este tipo será utilizado nos textos do cabeçalho."
+"This font family will be used for menu text.","Esta família de fontes será utilizada nos textos do menu."
+"This color will be used for menu item background on mouseover.","Esta cor de hover será utilizada no fundo dos links do menu."
+"This color will be used for full menu background.","Esta cor será utilizada no fundo do menu."
+"This color will be used for menu text.","Esta cor será utilizada nos textos do menu."
+"This color will be used for menu link mouseover.","Esta cor de hover será utilizada nos links do menu."
+"This size will be used for menu text.","Este tamanho será utilizado nos textos do menu."
+"This font weight will be used for menu text.","Esta espessura será utilizada nos textos do menu."
+"This line height will be used for menu text.","Esta altura de linha será utilizada nos textos do menu."
+"This transform will be used for menu text.","Este tipo será utilizado nos textos do menu."
+"This color will be used for full footer background.","Esta cor será utilizada no fundo do rodapé."
+"This font family will be used for footer text.","Esta família de fontes será utilizada nos textos do rodapé."
+"This color will be used for footer text.","Esta cor será utilizada nos textos do rodapé."
+"This color will be used for footer link.","Esta cor será utilizada nos links do rodapé."
+"This color will be used for footer text mouseover.","Esta cor de hover será utilizada nos links do rodapé."
+"This size will be used for footer text.","Este tamanho será utilizado nos textos do rodapé."
+"This font weight will be used for footer text.","Esta espessura será utilizada nos textos do rodapé."
+"This line height will be used for footer text.","Esta altura de linha será utilizada nos textos do rodapé."
+"This transform will be used for footer text.","Este tipo será utilizado nos textos do rodapé."
+"This font family will be used for footer titles text.","Esta família de fontes será utilizada nos títulos do rodapé."
+"This color will be used for footer titles text.","Esta cor será utilizada nos títulos do rodapé."
+"This color will be used for footer titles text mouseover.","Esta cor de hover será utilizada nos títulos do rodapé."
+"This size will be used for footer titles text.","Este tamanho será utilizado nos títulos do rodapé."
+"This font weight will be used for footer titles text.","Esta espessura será utilizada nos títulos do rodapé."
+"This line height will be used for footer titles text.","Esta altura de linha será utilizada nos títulos do rodapé."
+"This transform will be used for footer titles text.","Este tipo será utilizado nos títulos do rodapé."
+"This color will be used for button background.","Esta cor será utilizada no fundo dos botões."
+"This font family will be used for button text.","Esta família de fontes será utilizada no texto dos botões."
+"This color will be used for background mouseover","Esta cor de hover será utilizada no fundo dos botões."
+"This color will be used for button text.","Esta cor será utilizada no texto dos botões."
+"This color will be used for button text mouseover.","Esta cor de hover será utilizada no texto dos botões."
+"This size will be used for buton text.","Este tamanho será utilizado no texto dos botões."
+"This font weight will be used for button text.","Esta espessura será utilizada no texto dos botões."
+"This line height will be used for button text.","Esta altura de linha será utilizada no texto dos botões."
+"This transform will be used for button text.","Este tipo será utilizado no texto dos botões."
+"This color will be used for button border.","Esta cor será utilizada na borda dos botões."
+"This color will be used for button border on mouseover.","Esta cor de hover será utilizada na borda dos botões."
+"This radius will be used for button border.","Este raio será utilizado na borda dos botões"
+"This font family will be used for price text.","Esta família de fontes será utilizada no texto de preços."
+"This color will be used for price text.","Esta cor será utilizada no texto de preços."
+"This color will be used for button price on mouseover.","Esta cor de hover será utilizada nos botões de preço."
+"This size will be used for price text.","Este tamanho será utilizado no texto de preços."
+"This font weight will be used for price text.","Esta espessura será utilizada no texto de preços."
+"This line height will be used for price text.","Esta altura de linha será utilizada no texto de preços."
+"This position will be used for price text.","Esta posição será utilizada no texto de preços."
+"This font family will be used for titles text.","Esta família de fontes será utilizada em categorias, e em títulos de páginas."
+"This color will be used for titles text.","Esta cor será utilizada no texto de categorias, e de títulos de páginas."
+"This color will be used for titles text on mouseover.","Esta cor de hover será utilizada no texto de categorias, e de títulos de páginas."
+"This size will be used for titles text.","Este tamanho será utilizado no texto de categorias, e de títulos de páginas."
+"This weight will be used for titles text.","Esta espessura será utilizada no texto de categorias, e de títulos de páginas."
+"This line height will be used for titles text.","Esta altura de linha será utilizada no texto de categorias, e de títulos de páginas."
+"This color will be used for titles border bottom.","Esta cor será utilizada na borda inferior de categorias, e de títulos de páginas."
+"This transform will be used for titles text.","Este tipo será utilizado no texto de categorias, e de títulos de páginas."
+"This position will be used for titles text.","Esta posição será utilizada no texto de categorias, e de títulos de páginas."
+"This font family will be used for block titles.","Esta família de fontes será utilizada em títulos de blocos."
+"This color will be used for block titles.","Esta cor será utilizada em títulos de blocos."
+"This color will be used for block titles on mouseover.","Esta cor de hover será utilizada em títulos de blocos."
+"This size will be used for block titles.","Este tamanho será utilizado em títulos de blocos."
+"This font weight will be used for block titles.","Esta espessura será utilizada em títulos de blocos."
+"This line height will be used for block titles.","Esta altura de linha será utilizada em títulos de blocos."
+"This transform will be used for block titles.","Este tipo será utilizado em títulos de blocos."
+"This position will be used for block titles.","Esta posição será utilizada em títulos de blocos."
+"This font family will be used for block sub-titles.","Esta família de fontes será utilizada em subtítulos de blocos."
+"This color will be used for block sub-titles.","Esta cor será utilizada em subtítulos de blocos."
+"This color will be used for block sub-titles on mouseover.","Esta cor de hover será utilizada em subtítulos de blocos."
+"This size will be used for block sub-titles.","Este tamanho será utilizado em subtítulos de blocos."
+"This font weight will be used for block sub-titles.","Esta espessura será utilizada em subtítulos de blocos."
+"This line height will be used for block sub-titles.","Esta altura de linha será utilizada em subtítulos de blocos."
+"This color will be used for titles block sub-titles border bottom.","Esta cor será utilizada na borda inferior de subtítulos de blocos."
+"This transform will be used for block sub-titles.","Este tipo será utilizado em subtítulos de blocos."
+"This position will be used for block sub-titles.","Esta posição será utilizada em subtítulos de blocos."
