--- a/app/locale/pt_BR/Ziny_EditaFacil.csv
+++ b/app/locale/pt_BR/Ziny_EditaFacil.csv
@@ -2,7 +2,7 @@
 "Setting","Definição"
 "Yes","Sim"
 "No","Não"
-"Easy Custom Theme","Edita Fácil"
+"Easy Color Theme","Cores do Tema"
 "Enable","Habilitado"
 "Defines whether the module is active or not.","Define se o módulo está ativo ou não."
 "Global Settings","Definições Globais"
